objects/Content_Viewer__c.object
<CustomObject>
    <description>When a portal user view a content, we need to keep track of that user in a custom object so that Sauer Danfoss can report on them.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content Viewers</relationshipLabel>
        <relationshipName>Content_Viewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Id__c</fullName>
        <description>stores the content id that is being viewed</description>
        <label>Content Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Library__c</fullName>
        <description>Library name of the content</description>
        <label>Content Library</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Title__c</fullName>
        <description>stores the content title that is being viewed</description>
        <label>Content Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Version_Id__c</fullName>
        <label>Content Version Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>logged in user id</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content_Viewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Content Viewer</label>
    <listViews>
        <fullName>More_Columns</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Content_Id__c</columns>
        <columns>Content_Library__c</columns>
        <columns>Content_Title__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>More Columns</label>
        <sharedTo>
            <group>PlatformAdmin</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Content Viewer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Content Viewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>